<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_dst"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_dst"/>
    <TextView
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_dst"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_prc"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_prc"/>
    <TextView
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_prc"
        android:gravity="center"/>
    <EditText
        android:id="@+id/edt_aut"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_aut"/>
    <TextView
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_aut"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_custTotal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/label_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_valor"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="28sp"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/btn_calc"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calc"
        android:textAllCaps="true"/>


</LinearLayout>